[package]
name = "conapp"
version = "0.1.0"
authors = ["Funnisimo <funnisimo@users.noreply.github.com>"]
description = "Pure rust OpenGL accelerated roguelike console API with native/wasm support"
license = "MIT"
edition = "2021"
documentation = "https://docs.rs/conapp"
repository = "https://github.com/funnisimo/conapp"
keywords = [
    "roguelike",
    "console",
    "opengl",
    "wasm",
    "terminal",
    "ascii",
    "cp437",
]
homepage = "https://github.com/funnisimo/conapp"
readme = "README.md"

[features]
default = ["ecs"]
# ecs     = ["dep:legion"]
ecs = ["dep:bevy_ecs"]

[dependencies]
uni-gl      = "0.2"
lazy_static = "1.4"
winit       = "0.27.5"
bevy_ecs    = { version = "0.9.1", optional = true }
regex       = "1.6"

[dependencies.image]
version          = "0.24"
default-features = false
features         = ["png"]

[dev-dependencies]
unicode-segmentation = "1.10"
doryen-fov           = "0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
web-sys = { version = "0.3.60", features = [
    "HtmlCanvasElement",
    "Document",
    "HtmlElement",
    "Event",
    "MouseEvent",
    "KeyboardEvent",
    "DragEvent",
    "ProgressEvent",
    "EventTarget",
    "DataTransfer",
    "File",
    "FileReader",
    "FileList",
    "DomRect",
    "Window",
    "Performance",
    "Location",
    "console",
    "Element",
    "CssStyleDeclaration",
    "XmlHttpRequest",
    "XmlHttpRequestResponseType",
] }
# legion = { version = "0.4", optional = true, default-features = false, features = [
#     "wasm-bindgen",
# ] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.29.1"
# fix for missing features in rust 2021 (https://doc.rust-lang.org/nightly/edition-guide/rust-2021/default-cargo-resolver.html)
winapi = { version = "0.3.9", features = [
    "winerror",
    "winbase",
    "errhandlingapi",
] }
# legion = { version = "0.4", optional = true, default-features = false }
