[package]
name    = "gw_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomize         = "0.1.3"
bevy_ecs_macros = { path = "macros" }
bevy_ptr        = "0.10"
bevy_tasks      = "0.10"
bevy_utils      = "0.10"
async-channel   = "1.4"
event-listener  = "2.5"
thread_local    = "1.1.4"
fixedbitset     = "0.4.2"
rustc-hash      = "1.1"
downcast-rs     = "1.2"
serde           = { version = "1", features = ["derive"] }
