[package]
name    = "gw_ecs"
version = "0.1.0"
edition = "2021"

[dependencies]
smallvec       = "1.4"
itertools      = "0.10"
downcast-rs    = "1.2"
paste          = "1.0.0"
parking_lot    = "0.12.1"
bit-set        = "0.5"
thiserror      = "1.0"
atomic_refcell = "0.1.6"
bitflags       = "1.3.2"
gw_util        = { path = "../gw_util" }
# uuid           = { version = "1.3.0", features = ["v4"], optional = true }
# rayon             = { version = "1.4", optional = true }
# serde             = { version = "1", features = ["derive"], optional = true }
# scoped-tls-hkt    = { version = "0.1", optional = true }
# erased-serde      = { version = "0.3", optional = true }
# crossbeam-channel = { version = "0.5", optional = true }
