[package]
name          = "gw_util"
version       = "0.1.0"
authors       = ["Funnisimo <funnisimo@users.noreply.github.com>"]
description   = "Pure rust OpenGL accelerated roguelike console API with native/wasm support"
license       = "MIT"
edition       = "2021"
documentation = "https://docs.rs/gw_util"
repository    = "https://github.com/funnisimo/goblinwerks-rs"
keywords      = ["roguelike", "utilities", "cp437"]
homepage      = "https://github.com/funnisimo/goblinwerks-rs"
readme        = "README.md"

[features]
default = ["ecs"]
ecs     = ["dep:legion"]

[dependencies]
lazy_static      = "1.4"
regex            = "1.6"
toml_edit        = "0.19.4"
pest             = "2.5.3"
pest_derive      = "2.5.3"
assert_approx_eq = "1.1.0"
chrono           = "0.4.23"
rand             = "0.8.5"
rand_pcg         = "0.3.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
legion = { version = "0.4", optional = true }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = [
    "js",
] } # https://docs.rs/getrandom/latest/getrandom/#webassembly-support
legion = { version = "0.4", default-features = false, optional = true, features = [
    "wasm-bindgen",
] }
