[package]
name          = "gw_util"
version       = "0.1.0"
authors       = ["Funnisimo <funnisimo@users.noreply.github.com>"]
description   = "Pure rust OpenGL accelerated roguelike console API with native/wasm support"
license       = "MIT"
edition       = "2021"
documentation = "https://docs.rs/gw_util"
repository    = "https://github.com/funnisimo/goblinwerks-rs"
keywords      = ["roguelike", "utilities", "cp437"]
homepage      = "https://github.com/funnisimo/goblinwerks-rs"
readme        = "README.md"

[dependencies]
lazy_static          = "1.4"
regex                = "1.7.3"
toml                 = "0.7.2"
pest                 = "2.5.3"
pest_derive          = "2.5.3"
assert_approx_eq     = "1.1.0"
chrono               = "0.4.23"
rand                 = "0.8.5"
rand_pcg             = "0.3.1"
opensimplex_noise_rs = "0.3.0"
jsonc-parser         = "0.21.0"
serde_derive         = "1.0.160"
"serde"              = "1.0.160"
gw_ecs               = { path = "../gw_ecs" }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = [
    "js",
] } # https://docs.rs/getrandom/latest/getrandom/#webassembly-support

[dev-dependencies]
gw_app = { path = "../gw_app" }
# pest-language-server = "0.2"                  # Trying to get pest ide integration, but...
