[package]
name    = "gw_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-utils   = "0.1"
bitflags     = "1.3.2"
gw_app       = { path = "../gw_app" }
gw_util      = { path = "../gw_util" }
lazy_static  = "1.4.0"
gw_ui        = { path = "../gw_ui" }
num-rational = "0.4"

[dev-dependencies]
